--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ProjetoFinalGrupo4
 spring.profiles.active= dev
 spring.jpa.show-sql= true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=updade
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
